--- a/index.html
+++ b/index.html
@@ -5,20 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Text Replacer</title>
     <style>
-        body { display: flex; flex-direction: column; align-items: center; font-family: Arial, sans-serif; }
-        textarea, input { width: 300px; margin: 10px; padding: 10px; font-size: 16px; }
-        #output { margin-top: 10px; font-weight: bold; }
+        body { 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            font-family: Arial, sans-serif; 
+            margin-top: 50px;
+        }
+        textarea { 
+            width: 300px; 
+            height: 100px; 
+            margin: 10px; 
+            padding: 10px; 
+            font-size: 16px; 
+        }
+        button { 
+            margin: 10px; 
+            padding: 10px 20px; 
+            font-size: 16px; 
+            cursor: pointer; 
+        }
+        #output { 
+            margin-top: 20px; 
+            font-size: 18px; 
+            font-weight: bold; 
+        }
     </style>
 </head>
 <body>
     <h1>Text Replacer</h1>
-    <button onclick="applyReplacements()">Run Replacement</button>
+    <textarea id="inputText" placeholder="Enter your text here..."></textarea>
+    <button onclick="applyReplacements()">Replace Text</button>
     <div id="output">Modified Text: <span id="modifiedText"></span></div>
 
     <script>
-        // Hardcoded input text
-        const inputText = "hello world";
-
         // Hardcoded replacement rules
         const rules = {
             "h": ".",
@@ -27,6 +47,8 @@
         };
 
         function applyReplacements() {
+            // Get the text from the input field
+            const inputText = document.getElementById("inputText").value;
             let modifiedText = inputText;
 
             // Apply each replacement rule
@@ -35,7 +57,7 @@
                 modifiedText = modifiedText.replace(regex, replaceChar);
             }
 
-            // Display modified text
+            // Display the modified text
             document.getElementById("modifiedText").innerText = modifiedText;
         }
     </script>
