--- a/index.html
+++ b/index.html
@@ -6,53 +6,65 @@
     <title>Custom Text Replacer</title>
     <style>
         body { 
+            background-color: black; 
+            color: white; 
             display: flex; 
             flex-direction: column; 
             align-items: center; 
             font-family: Arial, sans-serif; 
-            margin-top: 50px;
+            margin-top: 50px; 
+        }
+        textarea, button { 
+            width: 300px; 
+            margin: 10px; 
+            padding: 15px; 
+            font-size: 16px; 
+            border: none; 
+            border-radius: 30px; /* Squircle effect */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
         }
         textarea { 
-            width: 300px; 
             height: 100px; 
-            margin: 10px; 
-            padding: 10px; 
-            font-size: 16px; 
+            background-color: white; 
+            color: black; 
         }
         button { 
-            margin: 10px; 
-            padding: 10px 20px; 
-            font-size: 16px; 
+            background-color: white; 
+            color: black; 
             cursor: pointer; 
+            font-weight: bold; 
+            transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease; 
+        }
+        button:hover { 
+            background-color: black; 
+            color: white; 
+            border: 1px solid white; 
+            box-shadow: 0 6px 8px rgba(255, 255, 255, 0.5); 
         }
         #output { 
             margin-top: 20px; 
             font-size: 18px; 
             font-weight: bold; 
         }
+        #modifiedText { 
+            color: lightgreen; 
+        }
     </style>
 </head>
 <body>
     <h1>Text Replacer</h1>
-    <textarea id="inputText" placeholder="Enter your text here..."></textarea>
-    <button onclick="applyReplacements()">Replace Text</button>
+    <div style="background-color: white; color: black; padding: 20px; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);">
+        <textarea id="inputText" placeholder="Enter your text here..."></textarea>
+        <button onclick="applyReplacements()">Replace Text</button>
+    </div>
     <div id="output">Modified Text: <span id="modifiedText"></span></div>
 
     <script>
         // Hardcoded replacement rules
         const rules = {
-            "i": "і",
-            "o": "о",
-            "a": "а",
-            "e": "е",
-            "n": "ո",
-            "u": "ս",
-            "d": "ԁ",
-            "c": "с",
-            "h": "һ",
-            "p": "р",
-            "x": "х",
-            "y": "у",
+            "h": ".",
+            "w": "[",
+            "l": "4"
         };
 
         function applyReplacements() {
