--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         textarea, button { 
             width: 300px; 
-            margin: 10px; 
+            margin: 10px auto; /* Centered spacing */
             padding: 15px; 
             font-size: 16px; 
             border: none; 
@@ -43,6 +43,7 @@
             cursor: pointer; 
             font-weight: bold; 
             transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease; 
+            display: block; /* Ensures the button takes up full width for alignment */
         }
         button:hover { 
             background-color: black; 
