--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Custom Text Replacer</title>
     <style>
         body { 
-            background-color: black; 
+            background-color: 282828; 
             color: white; 
             display: flex; 
             flex-direction: column; 
@@ -101,9 +101,18 @@
     <script>
         // Hardcoded replacement rules
         const rules = {
-            "h": ".",
-            "w": "[",
-            "l": "4"
+            "i": "і",
+            "o": "о",
+            "a": "а",
+            "e": "е",
+            "n": "ո",
+            "u": "ս",
+            "d": "ԁ",
+            "c": "с",
+            "h": "һ",
+            "p": "р",
+            "x": "х",
+            "y": "у",
         };
 
         function applyReplacements() {
