--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Custom Text Replacer</title>
     <style>
         body { 
-            background-color: 282828; 
+            background-color: #282828; 
             color: white; 
             display: flex; 
             flex-direction: column; 
